--- a/doAn/app/src/main/res/layout/thoat_dialog.xml
+++ b/doAn/app/src/main/res/layout/thoat_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Are you sure you want to exit?"
+        android:text="Bạn có chắc chắn muốn thoát không?"
         android:textSize="25dp"
         android:textColor="@color/black"
         />
@@ -25,7 +25,7 @@
             android:id="@+id/thoatBtn_yes"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="YES"
+            android:text="Có"
             android:gravity="center"
             android:textColor="@color/white"
             android:layout_marginRight="20dp"
@@ -35,7 +35,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="NO"
+            android:text="Không"
             android:textColor="@color/white"
             android:textSize="20dp"/>
 
