--- a/doAn/app/src/main/res/layout/activity_chi_tiet_cong_trinh.xml
+++ b/doAn/app/src/main/res/layout/activity_chi_tiet_cong_trinh.xml
@@ -5,77 +5,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="4"
-    tools:context=".ChiTietCongTrinh"
     android:padding="10dp"
-    >
+    tools:context=".ChiTietCongTrinh">
 
 
     <TextView
-        android:text="Mã công trình: "
-        android:textSize="16sp"
         android:layout_row="0"
         android:layout_column="0"
         android:layout_gravity="right"
-        />
+        android:text="Mã công trình: "
+        android:textSize="16sp" />
+
     <EditText
         android:id="@+id/maCongTrinhEdt_CTCT"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="fill_horizontal"
         android:layout_columnSpan="3"
-        android:enabled="false"
-        />
+        android:layout_gravity="fill_horizontal"
+        android:layout_marginLeft="10dp"
+        android:enabled="false" />
 
     <TextView
-        android:text="Tên công trình:"
         android:layout_row="1"
         android:layout_column="0"
         android:layout_gravity="right"
-        />
+        android:text="Tên công trình:" />
 
     <EditText
         android:id="@+id/tenCongTrinhEdt_CTCT"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="fill_horizontal"
         android:layout_columnSpan="3"
-        android:enabled="false"
-        />
+        android:layout_gravity="fill_horizontal"
+        android:layout_marginLeft="10dp"
+        android:enabled="false" />
 
     <TextView
-        android:text="Địa chỉ:"
         android:layout_row="2"
         android:layout_column="0"
         android:layout_gravity="right"
-        />
+        android:text="Địa chỉ:" />
 
     <EditText
         android:id="@+id/diaChiCongTrinhEdt_CTCT"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="fill_horizontal"
         android:layout_columnSpan="3"
-        android:enabled="false"
-        />
+        android:layout_gravity="fill_horizontal"
+        android:layout_marginLeft="10dp"
+        android:enabled="false" />
+
+    <ImageButton
+        android:id="@+id/inChiTietCongTrinhBtn_CTCT"
+        android:onClick="inChiTietCongTrinh"
+        android:layout_row="3"
+        android:layout_column="2"
+        android:src="@drawable/print_vector"/>
 
     <ImageButton
         android:id="@+id/suaChiTietCongTrinhBtn_CTCT"
         android:layout_row="3"
         android:layout_column="3"
         android:src="@drawable/edit_vector"
-        android:tag="non-edit"
-        />
+        android:tag="non-edit" />
 
-        <ListView
-            android:id="@+id/danhSachPhieuVanChuyenLv_CTCT"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@color/black"
-            android:dividerHeight="1dp"
-            android:layout_row="4"
-            android:layout_column="0"
-            android:layout_columnSpan="4"
-            android:layout_gravity="fill"
-            android:layout_marginTop="20dp"
-        >
-        </ListView>
+
+    <ListView
+        android:id="@+id/danhSachPhieuVanChuyenLv_CTCT"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_row="4"
+        android:layout_column="0"
+        android:layout_columnSpan="4"
+        android:layout_gravity="fill"
+        android:layout_marginTop="20dp"
+        android:divider="@color/black"
+        android:dividerHeight="1dp" />
 
 
 </GridLayout>
