--- a/doAn/app/src/main/res/layout/activity_in_chi_tiet_phieu.xml
+++ b/doAn/app/src/main/res/layout/activity_in_chi_tiet_phieu.xml
@@ -4,27 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="30dp"
     android:background="#D8D7D7"
     android:gravity="center|top"
     android:orientation="vertical"
     tools:context=".InChiTietPhieu">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Xem Trước"
-        android:textSize="25dp" />
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="545dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="#FFFF"
         android:paddingTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center|top"
             android:orientation="vertical">
 
@@ -32,162 +27,164 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="THEO DÕI VẬN CHUYỂN VẬT TƯ CÔNG TRÌNH"
-                android:textSize="18dp" />
+                android:text="THEO DÕI VẬN CHUYỂN\nVẬT TƯ CÔNG TRÌNH"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mã công trình: "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/maCongTrinhTv_ICTP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tên công trình: "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/tenCongTrinhTv_ICTP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Địa chỉ: "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/diaChiTv_ICTP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Phiếu vận chuyển: "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/maPhieu_ICTP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ngày vận chuyển: "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/ngayVanChuyenTv_ICTP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <TableLayout
-                android:layout_width="339dp"
+                android:id="@+id/bangChiTietVatTuTb_ICTP"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:orientation="vertical"
-                android:stretchColumns="0,1,2,3,4">
+                android:stretchColumns="0,1,2,3,4,5">
 
                 <TableRow
                     android:layout_width="1dip"
                     android:layout_height="wrap_content"
                     android:background="#CCC"
                     android:paddingRight="1dp"
-                    android:paddingBottom="1dp">>
+                    android:paddingBottom="1dp">
 
                     <TextView
-                        android:layout_marginLeft="1dp"
+
                         android:background="#FFF"
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="Tên VT"
-                        android:textSize="17dp" />
+                        android:textSize="16sp" />
 
                     <TextView
-                        android:layout_marginLeft="1dp"
+
                         android:background="#FFF"
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="Đơn vị"
-                        android:textSize="17dp" />
+                        android:textSize="16sp" />
 
                     <TextView
-                        android:layout_marginLeft="1dp"
+
                         android:background="#FFF"
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="SL"
-                        android:textSize="17dp" />
-
+                        android:textSize="16sp" />
                     <TextView
-                        android:layout_marginLeft="1dp"
+
+                        android:background="#FFF"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Giá v/c"
+                        android:textSize="16sp" />
+                    <TextView
+
                         android:background="#FFF"
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="Cự ly"
-                        android:textSize="17dp" />
+                        android:textSize="16sp" />
 
                     <TextView
-                        android:layout_marginLeft="1dp"
+
                         android:background="#FFF"
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="Thành tiền"
-                        android:textSize="17dp" />
+                        android:textSize="16sp" />
                 </TableRow>
 
             </TableLayout>
@@ -195,8 +192,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
                 android:gravity="right"
                 android:orientation="horizontal">
 
@@ -204,7 +200,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tổng cộng: "
-                    android:textSize="17dp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -212,7 +208,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textSize="17dp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -220,13 +216,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="40dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="70dp"
+                android:paddingTop="20dp"
                 android:text="Đại diện công trình" />
+
+            <EditText
+                android:id="@+id/daiDienCongTrinhEdt_ICTP"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_margin="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="right"
                 android:orientation="vertical">
 
@@ -240,13 +243,18 @@
                         android:id="@+id/ngayInTv_ICTP"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingRight="20dp"
-                        android:text="TpHCM, Ngày... Tháng... Năm...." />
+                        android:text="TPHCM, Ngày... Tháng... Năm...." />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Người lập" />
+
+                    <EditText
+                        android:id="@+id/nguoiLapEdt_ICTP"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="20dp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -258,26 +266,10 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
+    <ImageButton
+        android:id="@+id/kiemTraInBtn_ICTP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/backBtn_ICTP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thoát"
-            android:textSize="17dp" />
-
-        <Button
-            android:id="@+id/inBtn_ICTP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="In"
-            android:textSize="17dp" />
-    </LinearLayout>
+        android:src="@drawable/print_vector"
+        android:onClick="kiemTraChuKy"/>
 </LinearLayout>
