--- a/doAn/app/src/main/res/layout/activity_in_cong_trinh.xml
+++ b/doAn/app/src/main/res/layout/activity_in_cong_trinh.xml
@@ -4,22 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="30dp"
+    android:gravity="center|center_horizontal"
     android:orientation="vertical"
-    android:background="#D8D7D7"
-    android:gravity="center|top"
     tools:context=".InCongTrinh">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:text="Xem Trước"
-        android:gravity="center"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="521dp"
-        android:paddingTop="10dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="#FFFF">
 
         <LinearLayout
@@ -32,15 +25,15 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
                 android:gravity="center"
-                android:text="THEO DOI VẬN CHUYỂN VẬT TƯ CÔNG TRÌNH"
-                android:textSize="18dp" />
+                android:text="THEO DÕi VẬN CHUYỂN\nVẬT TƯ CÔNG TRÌNH"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:paddingLeft="20dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -49,16 +42,17 @@
                     android:text="Mã công trình: " />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/maCongTrinhTv_ICT"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:gravity="right"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:paddingLeft="20dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -67,16 +61,17 @@
                     android:text="Tên công trình: " />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tenCongTrinhTv_ICT"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:gravity="right"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:paddingLeft="20dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -85,24 +80,26 @@
                     android:text="Địa chỉ: " />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/diaChiTv_ICT"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16dp" />
+                    android:gravity="right"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <TableLayout
+                android:id="@+id/tableLayoyt_ICT"
                 android:layout_width="339dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical"
                 android:stretchColumns="1">
 
                 <TableRow
                     android:layout_width="1dip"
                     android:layout_height="wrap_content"
-                    android:background="#CCC"
-                    android:paddingRight="1dp"
-                    android:paddingBottom="1dp">
+                    android:background="#CCC">
 
                     <TextView
                         android:layout_width="100dp"
@@ -111,7 +108,7 @@
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="Mã Phiếu"
-                        android:textSize="17dp" />
+                        android:textSize="16sp" />
 
 
                     <TextView
@@ -120,14 +117,14 @@
                         android:gravity="center"
                         android:padding="5dp"
                         android:text="Ngày Vận Chuyển"
-                        android:textSize="17dp" />
+                        android:textSize="16sp" />
                 </TableRow>
             </TableLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginVertical="20dp"
                 android:gravity="right"
                 android:orientation="horizontal">
 
@@ -135,36 +132,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tổng số phiếu: "
-                    android:textSize="17dp"
-                    android:textStyle="bold" />
+                    android:textSize="17sp" />
 
                 <TextView
-                    android:id="@+id/tongCongTv_ICTP"
+                    android:id="@+id/tongSoPVC_ICT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="17dp"
-                    android:textStyle="bold" />
+                    android:textSize="17sp" />
             </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="right"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:gravity="right|bottom"
+                android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <TextView
-                        android:id="@+id/ngayInTv_ICTP"
+                        android:id="@+id/ngayInTv_ICT"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="TpHCM, Ngày... Tháng... Năm...."
-                        android:paddingRight="25dp"/>
+                        android:paddingRight="25dp"
+                        android:text="TPHCM, Ngày... Tháng... Năm...." />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -173,35 +169,21 @@
                 </LinearLayout>
             </LinearLayout>
 
-
-            <TextView
+            <EditText
+                android:id="@+id/nguoiLapEdt_ICT"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="50dp"/>
+                android:layout_height="match_parent"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:tooltipText="Điền tên người lập" />
         </LinearLayout>
     </ScrollView>
 
-
-    <LinearLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/backBtn_ICT"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thoát"
-            android:textSize="17dp"/>
-        <Button
-            android:id="@+id/inBtn_ICT"
-            android:layout_marginLeft="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="In"
-            android:textSize="17dp"/>
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/dongYIn_ICT"
+        android:layout_width="62dp"
+        android:layout_height="62dp"
+        android:src="@drawable/print_vector"
+        android:onClick="kiemTraChuKy"/>
 
 </LinearLayout>
