--- a/doAn/app/src/main/res/layout/activity_sua_phieu_van_chuyen.xml
+++ b/doAn/app/src/main/res/layout/activity_sua_phieu_van_chuyen.xml
@@ -57,7 +57,13 @@
         android:layout_columnSpan="3"
 
         />
-
+    <ImageButton
+        android:id="@+id/inChiTietPhieuBtn_SPVC"
+        android:src="@drawable/print_vector"
+        android:layout_column="0"
+        android:onClick="inChiTietPhieuVanChuyen"
+        android:layout_row="3"
+        />
     <ImageButton
         android:id="@+id/themVatTu_SPVC"
         android:layout_row="3"
